--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
             </footer>
         </div>
     </div>
-    <script src="events.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
